force-app/main/default/objects/resource__c/resource__c.object-meta.xml
<CustomObject>
    <label>resource</label>
    <nameField>
        <label>resource Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>resources</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>