force-app/main/default/objects/resource__c/fields/battle_station__c.field-meta.xml
<CustomField>
    <fullName>battle_station__c</fullName>
    <label>battle station</label>
    <referenceTo>battle_station__c</referenceTo>
    <relationshipLabel>resources</relationshipLabel>
    <relationshipName>resources</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>