force-app/main/default/objects/resource__c/fields/utilization__c.field-meta.xml
<CustomField>
    <fullName>utilization__c</fullName>
    <label>utilization</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>