force-app/main/default/objects/resource__c/validationRules/Inspectors_Must_Work_Overtime.validationRule-meta.xml
<ValidationRule>
    <fullName>Inspectors_Must_Work_Overtime</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Name=&quot;Exhaust Port Inspector&quot;,  utilization__c &lt;1.5)</errorConditionFormula>
    <errorDisplayField>utilization__c</errorDisplayField>
    <errorMessage>Exhaust Port Inspectors must work at least 150%. No coffee breaks!</errorMessage>
</ValidationRule>